# ckanext-userdatasets

./: .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
ckanext/: __init__.py
ckanext/userdatasets/: plugin.py
ckanext/userdatasets/lib/: helpers.py
ckanext/userdatasets/logic/: utils.py  validators.py
ckanext/userdatasets/logic/action/: create.py  get.py  update.py
ckanext/userdatasets/logic/auth/: auth.py  create.py  delete.py  get.py  update.py
ckanext/userdatasets/tests/: __init__.py  test_auth_actions_unit.py  test_functional.py  test_get_default_unit.py
docker/: Dockerfile
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: test_auth_actions_unit.py  test_functional.py
